test-resources/invalid-project/src/main/java/test/group/id/FSI.java
package test.group.id;

/**
 * ⁨
 * Bidi characters above
 */
public class FSI
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
